@@ -1,5 +1,5 @@
-AUX security-336916.patch 2402 RMD160 2b23f0914dd913aaff26f326f455fad8b9bdc274 SHA1 9c9ac93e4b6aaf6273da327dcf08813d3e018869 SHA256 dd46ff0a699f641fb330eeb8400704fdf12c8ac62715fb006ed2d688f89c89df
+AUX security-336916.patch 2537 RMD160 4589e69d2c3418d5c6295b730a2e8fdd8b336b0c SHA1 6fa902fbb4eaa5f33ffb77ffcaf75ec0c4a09bc1 SHA256 8ca31de74ad86173cea3ce6fcd91aa4fa791682eea3c0882fa6e55ceab55a071
 DIST pidgin-knotify-0.2.1.tar.gz 321476 RMD160 778b413bdb2e8dc05a3675f0f170a48382136501 SHA1 27c50a5eb3ea063ce1abb516e3244823e3b6a244 SHA256 3fd31c1a0d1b0ede697cf7fdd85b30a6160d3331f980dbf3da3f41bb0ccb559c
 EBUILD pidgin-knotify-0.2.1-r1.ebuild 730 RMD160 a150f40c408842d2ab2c02c57cd9b9581ec1bb68 SHA1 0b324d968a4c2d581c2d35ffb86f05dfcbf6a3e4 SHA256 e2c42f3f52acfc74351acd956f9570e260b0f1a5726885f305948255fd5b5ef9
-MISC ChangeLog 532 RMD160 e078d11b0b1acea6ccca87f623684e4e55c52441 SHA1 5da53eff818da8a7f9855baf331cd54244034daa SHA256 f83bdf2a1afc8a1252feed2d537eec04248ee3e93989cce51c7eefe2228333f9
+MISC ChangeLog 651 RMD160 5193657b3c14e653e264e9b841d9b6bacbc85fc5 SHA1 5054c953a07ae1bc9939e2f8dd2304ed0f4027ee SHA256 32bb8469f5346fcd87e5f0c9bec97ebc1573dbc633c23544873b5dd8ae3ec520
 MISC metadata.xml 297 RMD160 dcd033d6792ff12fe189d2171e65a2e3e85757ec SHA1 4e17f752f013e23d55be5ee04dc0d9fe821e6564 SHA256 52deac29ec96a0863fb886de592500bfd2e3e91a5027a4234444a1b862df2690
